[EIN-12356]-Position trends alignemnt fixes

--- a/src/app/dashboard/widgets/percentage-ratio-indicator/percentage-ratio-indicator.component.scss
+++ b/src/app/dashboard/widgets/percentage-ratio-indicator/percentage-ratio-indicator.component.scss
@@ -21,3 +21,9 @@
 .e-arrow-right-up {
   font-size: 12px;
 }
+
+.percentage-ratio-mar{
+  .percentage-ratio__value {
+    margin: 0 5px 0 5px !important;
+  }
+}
